--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -42,7 +42,7 @@
 <!-- FOOTER -->
   <footer id="contacto">
     <p>©️ 2025 E MARKETING - Todos los derechos reservados</p>
-    <p>Email: contacto@SOLVIFINANCE.com</p>
+    <p>Email: contacto@EMARKETING.com</p>
     <!-- Botón de ejemplo para JS -->
     <button id="btnSaludo">Haz click para un saludo</button>
   </footer>
