--- a/weather/weather.html
+++ b/weather/weather.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title> W E A T H E R MX</title>
+<title>W E A T H E R MX</title>
 <link rel="stylesheet" href="css/weather.css">
 </head>
 <body>
@@ -14,31 +14,30 @@
   </header>
   <main class="main-content">  
 
-<div class="weather-app">
-</h1>Clima MX 🇲🇽</h1>
-        
+    <div class="weather-app">
+
+        <h2>Clima MX 🇲🇽</h2>
+
         <div class="search-box">
-            <input type="text" id="city-input" placeholder="Ingresa una ciudad de México (ej: Monterrey)">
+            <input type="text" id="city-input" placeholder="Ingresa una ciudad o estado (ej: Chihuahua)">
             <button id="search-button">Buscar</button>
         </div>
 
         <div id="weather-data" style="display: none;">
-            <div id="current-weather" class="current-weather">
-                </div>
+            <div id="current-weather" class="current-weather"></div>
 
             <div id="forecast" class="forecast">
                 <h2>Pronóstico para los próximos días</h2>
-                </div>
+            </div>
         </div>
 
         <p id="error-message" class="error-message"></p>
     </div>
     
 </main>
-     <!--Footer de la página-->
-    <footer class="footer">
-        <p>&copy; 2025 W E A T H E R MX. Todos los derechos reservados.</p>
-    </footer>
-    <script src="js/weather.js"></script>
+<footer class="footer">
+    <p>&copy; 2025 W E A T H E R MX. Todos los derechos reservados.</p>
+</footer>
+<script src="js/weather.js"></script>
 </body>
 </html>
